<resources>
    <string name="app_name">Streetglide</string>
    <string name="action_settings">Settings</string>
    <string name="tv_runsheet_title">كشف التسليمات اليومية</string>
    <string name="tv_runsheet_cashcollect">النقدية</string>
    <string name="tv_runsheet_undeliveredshipmentscount">5</string>
    <string name="tv_runsheet_deliveryfailedtab">لم يتم التسليم</string>
    <string name="tv_runsheet_deliveredshipmentscount">95</string>
    <string name="tv_runsheet_deliverysuccesstab">تم التسليم</string>
    <string name="tv_runsheet_pendingshipmentscount">0</string>
    <string name="tv_runsheet_pendingshipments">تحت التسليم</string>
    <string name="scan_text_count">20</string>
    <string name="main_menu">main_menu</string>
    <string name="cash_collect_info">اجمالي المبلغ الذي تم تحصليه</string>
    <string name="con_btn">الاستمرار</string>
    <string name="failure_title">خطأ حرج </string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_details">Enter Details</string>
    <string name="location">location</string>
    <string name="tv_runsheet_consigneename">Consignee name</string>
    <string name="shipment_icon">shipment icon</string>
    <string name="left_arrow">left arrow</string>
    <string name="title_activity_scan">ScanActivity</string>
    <string name="profile_icon">profile icon</string>
    <string name="tv_runsheet_address">شارع مصطفي النحاس م.نصر</string>
    <string name="consignee_ship_no">10</string>
    <string name="tv_discrepancy_consigneename">اسلام نادر</string>
    <string name="phone_info_key">رقم التليفون:</string>
    <string name="title_activity_consignee_details">ConsigneeDetailsActivity</string>
    <string name="backbtn_icon_descreption">button back to the previous screen</string>
    <string name="txtview_consigneedetails_consigneename_">نهال بكر</string>
    <string name="profileicon_consigneedetails_consigneeicon">profile icon of consignee</string>
    <string name="btn_consigneedetails_changestatuses">تغيير حالات الشحنات</string>
    <string name="btn_consigneedetails_confirmchanges">تأكيد</string>
    <string name="img_cardshipment_descriptionofshipmenticon">shipment icon</string>
    <string name="img_cardshipment_descriptionofbarcodeicon">barcode icon</string>
    <string name="txtview_cardshipment_barcodevalue">1594413926</string>
    <string name="img_cardshipment_descriptionofclienticon">client icon</string>
    <string name="txtview_cardshipment_clientname">باسم الشوالي</string>
    <string name="img_cardshipment_descriptionofcompanyicon">company icon</string>
    <string name="txtview_cardshipment_companyname">شركة جوميا</string>
    <string name="img_cardshipment_descriptionofcashicon">cash collection icon</string>
    <string name="txtview_cardshipment_cash">إجمالى التحصيل</string>
    <string name="txtview_cardshipment_cashvalue">500</string>
    <string name="txtview_cardshipment_shipmentstatus">حالة الشحنة :</string>
    <string name="img_cardshipment_descriptionofarrowicon">down arrow</string>
    <string name="txtview_statuses_deliveredstatus">تم التسليم</string>
    <string name="img_consigneedetails_descriptionoflocationicon">location icon</string>
    <string name="txtview_consigneedetails_elmokattamaddress">شارع المعهد المتفرع من شارع 9 المقطم</string>
    <string name="img_consigneedetails_descriptionofphoneicon">mobile phone icon</string>
    <string name="txtview_consigneedetails_consigneenumber">01141235564</string>
    <string name="msg_checkstatusupdate_checkchangestatus">هل تريد تغيير حالة الشحنات ؟</string>
    <string name="btn_checkstatusupdate_no">لا أريد</string>
    <string name="btn_checkstatusupdate_yes">نعم</string>
    <string name="txtview_cardshipment_shippingfees">مصاريف الشحن</string>
    <string name="txtview_cardshipment_shippingvalue">35</string>
    <string name="tv_cardshipment_notes">ملاحظات :</string>
    <string name="tv_cardshipment_postponenote">سيتم التسليم فى تمام الساعة 2 ظهرا</string>
    <string name="txtview_dialogaddnoteonstatus_notes">الملاحظات</string>
    <string name="txtview_dialogaddnotesonstatus_addyournote">أضف ملاحظاتك:</string>
    <string name="txtview_dialogaddnotesonstatus_cash">المبلغ:</string>
    <string name="txtview_dialogaddnoteonstatus_save">حفظ</string>
    <string name="txtview_dialogaddnoteonstatus_cancel">إلغاء</string>
    <string name="fake_shipmnet_note">نظرا لأن الجهات الحكومية تعمل على تنفيذ مشاريع استراتيجية.</string>
    <string name="notes_key">ملاحظات:</string>
    <string name="shipment_count_number">1</string>
    <string name="barcode_shipment">12345678</string>
    <string name="company_name">سوق دوت كوم</string>
    <string name="shipment_status_flag">تم التسليم</string>
    <string name="shipment_money_collect">40 جنيه</string>
    <string name="total_cahs_key">اجمالي:</string>
    <string name="total_cash_money_collect">200 جنيه</string>
    <string name="tv_runsheet_shipmentcount">10</string>
    <string name="tv_scan_scanshipments">فحص الشحنات</string>
    <string name="tv_scan_countshipment">0</string>
    <string name="tv_startvalidation_validateshipments">التحقق من الشحنات</string>

    <string name="save_entrance">تسجيل الدخول</string>
    <string name="welcome_title">مرحبا بك برجاء ادخال بياناتك لتسجيل الدخول</string>
    <string name="login_data">اسم المستخدم</string>
    <string name="password_data">الرقم السري</string>
    <string name="login_btn_entrance">دخول</string>
    //Exception messages
    <string name="exception_message_generic">خطا في السيستم</string>
    <string name="exception_message_no_connection">تاكد من اتصال الانترنت</string>
    <string name="exception_message_user_not_found">برجاء التأكد من كود المندوب او كلمة السر و اعادة المحاولة</string>
    <string name="exception_message_user_inactive">هذا المستخدم غير مفعل برجاء الرجوع الي الجهة المعنية</string>
    <string name="token_expired">تم انتهاء صلاحيتك اليوميه برجاء الدخول</string>
    <string name="empty_login_fields">برجاء ادخال كلا من كود المندوب و كلمة السر</string>
    <string name="undo_snackbar">الغاء الرساله</string>
    <string name="retry_snackbar">اعادة الرساله</string>
    <string name="sheet_existed">لديك شيت اليوم</string>
    <string name="sheet_not_existed"> ليس لديك شيت اليوم</string>
    <string name="user_not_existed">المندوب غير مدرج في السيستم</string>
    <string name="txtview_nocurrentsheet_nosheet">لا يوجد لديك شيت برجاء الانتظار…</string>
    <string name="btn_nocurrentsheet_refresh">إعادة التحميل</string>
    <string name="tv_discrepancy_reportpage">صفحة التقارير</string>
    <string name="tv_scan_scan_shipments">فحص الشحنات</string>
    <string name="btn_scan_done_scanning">تم الفحص</string>
    <string name="tv_scan_count_shipment">0</string>
    <string name="title_scan_failure">خطأ</string>
    <string name="tv_discrepancy_consignee_name">اسلام نادر</string>
    <string name="tv_discrepancy_barcode">123456789</string>
    <string name="btn_discrepancy_remove">حذف</string>
    <string name="btn_discrepancy_refreshsheet">اعادة تحميل</string>
    <string name="error_msg_shipment_not_in_sheet">برجاء العلم ان هذة الشحنة غير موجودة في الشيت برجاء اعادتها الي المخزن عند الانتهاء من عملية التحقق/الفحص</string>
    <string name="error_msg_shipment_already_scanned">هذة الشحنة تم فحصها بالفعل</string>
    <string name="tv_startvalidation_validate_shipments">التحقق من الشحنات</string>
    <string name="tv_startvalidation_start">ابدأ</string>
    <string name="tv_starttrip_trip">الرحلة</string>
    <string name="img_scan_scan_icon">scan icon</string>
</resources>